@@ -1,3 +1,8 @@
+2017-08-24  Steven Munroe  <munroesj@gcc.gnu.org>
+
+	* gcc.target/powerpc/mmx-packuswb-1.c [NO_WARN_X86_INTRINSICS]:
+	Define.  Suppress warning during tests.
+
 2017-08-24  Uros Bizjak  <ubizjak@gmail.com>
 
 	* lib/target-supports.exp: Group together target-dependant checks.
